--- a/index.html
+++ b/index.html
@@ -1,62 +1,330 @@
 <!doctype html>
-<!-- This is really cool stuff -->
 <html>
     <head>
         <title>
-        Index 
+            Cricket
         </title>
-        <link rel="icon" type="image/x-icon" href="/Images/star.ico" >
+        <link rel="icon" type="image/x-icon" href="Images/cricket.ico" >
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <a href="Testing/hriday_test.html" title="hriday_test.html">Click here</a> <br>
         <a href="hriday.html" target="_blank" title="hriday.html">Click here</a>
         <hr>
-        <h1> This is header 1 </h1>
-        <h2> This is header 2 </h2>
-        <h3> This is header 3 </h3>
-        <h4> This is header 4 </h4>
-        <h5> This is header 5 </h5>
-        <h6> This is header 6 </h6>
-        <hr>
-        <p>
-            this is one line afterwhich we go to next line <br>
-            this whole content is in a paragraph like all content should be 
-        </p>
-        <hr>
-        <p>
-            <b> This is bold text </b> <br>
-            <i> This is italic text </i> <br>
-            <strong> This is strong text same like bold </strong> <br>
-            <em> This is empasized text same like italics </em> <br>
-            <mark> This is maked text or highlighted </mark> <br>
-            <small> This is small text </small> <br>
-            <del> This is deleted text or strikethrough </del> <br>
-            Sub<sub> This is subscript </sub> <br>
-            Sup<sup> This is superscript </sup> 
-        </p>
-        <hr>
-        <p>
-            Here is a quote from <abbr title="World Wildlife Foundation"> WWF's </abbr> website:
-        </p>
-        <blockquote cite="http://www.worldwildlife.org/who/index.html">
-            <q>
-                For 60 years, WWF has worked to help people and nature thrive. As the world's leading conservation organization, WWF works in nearly 100 countries. At every level, we collaborate with people around the world to develop and deliver innovative solutions that protect communities, wildlife, and the places in which they live.
-            </q>
-        </blockquote>
-        <hr>
-        <p> 
-            <cite> Citations come here like image/tables/etc </cite> this is normal too 
-        </p>
-        <hr>
-            <address>
-                Written by John Doe.<br>
-                Visit us at:<br>
-                Example.com<br>
-                Box 564, Disneyland<br>
-                USA
-            </address>
-        <hr>
-            <bdo dir="rtl">This text will be written from right to left</bdo> <br>
-            <bdo dir="ltr">This text will be written from right to left</bdo>
+        <h1>Cricket Stats:</h1>
+        <table>
+          <tr>
+            <th>Month</th>
+            <th>Type</th>
+            <th>Aarav</th>
+            <th>Hriday</th>
+            <th>Krishiv</th>
+            <th>Nirvaan</th>
+            <th>Panav</th>
+            <th>Pranay</th>
+            <th>Preet</th>
+            <th>Priyansh</th>
+            <th>Vedant</th>
+          </tr>
+          <tr>
+            <td rowspan="2">January</td>
+            <td>Runs</td>
+            <td>141</td>
+            <td>643</td>
+            <td>17</td>
+            <td>329</td>
+            <td>501</td>
+            <td>NA</td>
+            <td>NA</td>
+            <td>557</td>
+            <td>NA</td>
+          </tr>
+          <tr>
+            <td>Wickets</td>
+            <td>9</td>
+            <td>21</td>
+            <td>3</td>
+            <td>10</td>
+            <td>23</td>
+            <td>NA</td>
+            <td>NA</td>
+            <td>25</td>
+            <td>NA</td>
+          </tr>
+          <tr>
+            <td rowspan="2">February</td>
+            <td>Runs</td>
+            <td>43</td>
+            <td>607</td>
+            <td>126</td>
+            <td>33</td>
+            <td>321</td>
+            <td>NA</td>
+            <td>NA</td>
+            <td>335</td>
+            <td>13</td>
+          </tr>
+          <tr>
+            <td>Wickets</td>
+            <td>4</td>
+            <td>5</td>
+            <td>5</td>
+            <td>2</td>
+            <td>10</td>
+            <td>NA</td>
+            <td>NA</td>
+            <td>12</td>
+            <td>NA</td>
+          </tr>
+          <tr>
+            <td rowspan="2">March</td>
+            <td>Runs</td>
+            <td>364</td>
+            <td>1110</td>
+            <td>NA</td>
+            <td>278</td>
+            <td>916</td>
+            <td>80</td>
+            <td>58</td>
+            <td>768</td>
+            <td>NA</td>
+          </tr>
+          <tr>
+            <td>Wickets</td>
+            <td>24</td>
+            <td>35</td>
+            <td>NA</td>
+            <td>10</td>
+            <td>31</td>
+            <td>5</td>
+            <td>2</td>
+            <td>25</td>
+            <td>1</td>
+          </tr>
+          <tr>
+            <td rowspan="2">April</td>
+            <td>Runs</td>
+            <td>760</td>
+            <td>1032</td>
+            <td>211</td>
+            <td>76</td>
+            <td>574</td>
+            <td>33</td>
+            <td>69</td>
+            <td>342</td>
+            <td>12</td>
+          </tr>
+          <tr>
+            <td>Wickets</td>
+            <td>26</td>
+            <td>30</td>
+            <td>4</td>
+            <td>4</td>
+            <td>29</td>
+            <td>NA</td>
+            <td>5</td>
+            <td>17</td>
+            <td>NA</td>
+          </tr>
+          <tr>
+            <td rowspan="2">May</td>
+            <td>Runs</td>
+            <td>788</td>
+            <td>1179</td>
+            <td>4</td>
+            <td>218</td>
+            <td>889</td>
+            <td>NA</td>
+            <td>79</td>
+            <td>808</td>
+            <td>NA</td>
+          </tr>
+          <tr>
+            <td>Wickets</td>
+            <td>28</td>
+            <td>39</td>
+            <td>1</td>
+            <td>7</td>
+            <td>28</td>
+            <td>NA</td>
+            <td>1</td>
+            <td>21</td>
+            <td>NA</td>
+          </tr>
+          <tr>
+            <td rowspan="2">June</td>
+            <td>Runs</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Wickets</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td rowspan="2">July</td>
+            <td>Runs</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Wickets</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td rowspan="2">August</td>
+            <td>Runs</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Wickets</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td rowspan="2">September</td>
+            <td>Runs</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Wickets</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td rowspan="2">October</td>
+            <td>Runs</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Wickets</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td rowspan="2">November</td>
+            <td>Runs</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Wickets</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td rowspan="2">December</td>
+            <td>Runs</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Wickets</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+        </table>        
     </body>
 </html>
