--- a/hriday.html
+++ b/hriday.html
@@ -1,167 +1,57 @@
 <!doctype html>
+<!-- This is really cool stuff -->
 <html>
     <head>
-        <title>
-        Hriday 
-        </title>
+        <title>Teaching</title>
     </head>
     <body>
-        <a href="index.html">Hello Hriday</a>
-        <ol>
-            <li>Aarav Stats</li><hr>
-            <ul>
-                <li>Runs Scored In January = 141</li> 
-                <li>Runs Scored In Febuary = 43</li>
-                <li>Runs Scored In March = 364</li>
-                <li>Runs Scored In April = 760</li>
-                <li>Runs Scored In May = 788</li>
-            </ul>
-            <hr>
-            <ul>
-                <li>Wickets Taken In January = 9</li>
-                <li>Wickets Taken In Febuary = 4</li>
-                <li>Wickets Taken In March = 24</li>
-                <li>Wickets Taken In April = 26</li>
-                <li>Wickets Taken In May = 28</li>
-            </ul>
-            <hr>
-            <li> Hriday Stats </li><hr>
-            <ul>
-                <li>Runs Scored In January = 643  </li> 
-                <li>Runs Scored In Febuary = 607  </li>
-                <li>Runs Scored In March = 1110 </li>
-                <li>Runs Scored In April = 1032 </li>
-                <li>Runs Scored In May = 1179 </li>
-            </ul>
-            <hr>
-            <ul>
-                <li>Wickets Taken In January = 21 </li>
-                <li>Wickets Taken In Febuary = 5  </li>
-                <li>Wickets Taken In March = 35 </li>
-                <li>Wickets Taken In April = 30 </li>
-                <li>Wickets Taken In May = 39 </li>
-            </ul>
-            <hr>
-            <li> Krishiv Stats </li><hr>
-            <ul>
-                <li>Runs Scored In January = 17 </li> 
-                <li>Runs Scored In Febuary = 126 </li>
-                <li>Runs Scored In March = 0 </li>
-                <li>Runs Scored In April = 211 </li>
-                <li>Runs Scored In May = 4 </li>
-            </ul>
-            <hr>
-            <ul>
-                <li>Wickets Taken In January = 3 </li>
-                <li>Wickets Taken In Febuary = 5 </li>
-                <li>Wickets Taken In March = 0 </li>
-                <li>Wickets Taken In April = 4 </li>
-                <li>Wickets Taken In May = 1 </li>
-            </ul>
-            <hr>
-            <li> Nirvaan Stats </li><hr>
-            <ul>
-                <li>Runs Scored In January = 329 </li> 
-                <li>Runs Scored In Febuary = 33 </li>
-                <li>Runs Scored In March = 278 </li>
-                <li>Runs Scored In April = 76 </li>
-                <li>Runs Scored In May = 218 </li>
-            </ul>
-            <hr>
-            <ul>
-                <li>Wickets Taken In January = 10 </li>
-                <li>Wickets Taken In Febuary = 2 </li>
-                <li>Wickets Taken In March = 10 </li>
-                <li>Wickets Taken In April = 4 </li>
-                <li>Wickets Taken In May = 7 </li>
-            </ul>
-            <hr>
-            <li> Panav Stats </li><hr>
-            <ul>
-                <li>Runs Scored In January = 501 </li> 
-                <li>Runs Scored In Febuary = 321 </li>
-                <li>Runs Scored In March = 916 </li>
-                <li>Runs Scored In April = 574 </li>
-                <li>Runs Scored In May = 889 </li>
-            </ul>
-            <hr>
-            <ul>
-                <li>Wickets Taken In January = 23 </li>
-                <li>Wickets Taken In Febuary = 10 </li>
-                <li>Wickets Taken In March = 31 </li>
-                <li>Wickets Taken In April = 29 </li>
-                <li>Wickets Taken In May = 28 </li>
-            </ul>
-            <hr>
-            <li> Pranay Stats </li><hr>
-            <ul>
-                <li>Runs Scored In January = 0 </li> 
-                <li>Runs Scored In Febuary = 0 </li>
-                <li>Runs Scored In March = 80 </li>
-                <li>Runs Scored In April = 33 </li>
-                <li>Runs Scored In May = 0 </li>
-            </ul>
-            <hr>
-            <ul>
-                <li>Wickets Taken In January = 0 </li>
-                <li>Wickets Taken In Febuary = 0 </li>
-                <li>Wickets Taken In March = 5 </li>
-                <li>Wickets Taken In April = 0 </li>
-                <li>Wickets Taken In May = 0 </li>
-            </ul>
-            <hr>
-            <li> Preet Stats </li><hr>
-            <ul>
-                <li>Runs Scored In January = 0  </li> 
-                <li>Runs Scored In Febuary = 0  </li>
-                <li>Runs Scored In March = 58 </li>
-                <li>Runs Scored In April = 69 </li>
-                <li>Runs Scored In May = 79 </li>
-            </ul>
-            <hr>
-            <ul>
-                <li>Wickets Taken In January = 0 </li>
-                <li>Wickets Taken In Febuary = 0 </li>
-                <li>Wickets Taken In March = 2 </li>
-                <li>Wickets Taken In April = 5 </li>
-                <li>Wickets Taken In May = 1 </li>
-            </ul>
-            <hr>
-            <li> Priyansh Stats </li><hr>
-            <ul>
-                <li>Runs Scored In January = 557 </li> 
-                <li>Runs Scored In Febuary = 335 </li>
-                <li>Runs Scored In March = 768 </li>
-                <li>Runs Scored In April = 342 </li>
-                <li>Runs Scored In May = 808 </li>
-            </ul>
-            <hr>
-            <ul>
-                <li>Wickets Taken In January = 25 </li>
-                <li>Wickets Taken In Febuary = 12 </li>
-                <li>Wickets Taken In March = 25 </li>
-                <li>Wickets Taken In April = 17 </li>
-                <li>Wickets Taken In May = 21 </li>
-            </ul>
-            <hr>
-            <li> Vedant Stats </li><hr>
-            <ul>
-                <li>Runs Scored In January = 0 </li> 
-                <li>Runs Scored In Febuary = 13 </li>
-                <li>Runs Scored In March = 0 </li>
-                <li>Runs Scored In April = 12 </li>
-                <li>Runs Scored In May = 0 </li>
-            </ul>
-            <hr>
-            <ul>
-                <li>Wickets Taken In January = 0 </li>
-                <li>Wickets Taken In Febuary = 0 </li>
-                <li>Wickets Taken In March = 1 </li>
-                <li>Wickets Taken In April = 0 </li>
-                <li>Wickets Taken In May = 0 </li>
-            </ul>
-            <hr>
-        </ol>
-        <img src="Images/background.png" alt="Background Image" height="100%" width="100%" >
+        <a href="index.html" target="_blank" title="index.html">Click here</a>
+        <h1> This is header 1 </h1>
+        <h2> This is header 2 </h2>
+        <h3> This is header 3 </h3>
+        <h4> This is header 4 </h4>
+        <h5> This is header 5 </h5>
+        <h6> This is header 6 </h6>
+        <hr>
+        <p>
+            this is one line afterwhich we go to next line <br>
+            this whole content is in a paragraph like all content should be 
+        </p>
+        <hr>
+        <p>
+            <b> This is bold text </b> <br>
+            <i> This is italic text </i> <br>
+            <strong> This is strong text same like bold </strong> <br>
+            <em> This is empasized text same like italics </em> <br>
+            <mark> This is maked text or highlighted </mark> <br>
+            <small> This is small text </small> <br>
+            <del> This is deleted text or strikethrough </del> <br>
+            Sub<sub> This is subscript </sub> <br>
+            Sup<sup> This is superscript </sup> 
+        </p>
+        <hr>
+        <p>
+            Here is a quote from <abbr title="World Wildlife Foundation"> WWF's </abbr> website:
+        </p>
+        <blockquote cite="http://www.worldwildlife.org/who/index.html">
+            <q>
+                For 60 years, WWF has worked to help people and nature thrive. As the world's leading conservation organization, WWF works in nearly 100 countries. At every level, we collaborate with people around the world to develop and deliver innovative solutions that protect communities, wildlife, and the places in which they live.
+            </q>
+        </blockquote>
+        <hr>
+        <p> 
+            <cite> Citations come here like image/tables/etc </cite> this is normal too 
+        </p>
+        <hr>
+            <address>
+                Written by John Doe.<br>
+                Visit us at:<br>
+                Example.com<br>
+                Box 564, Disneyland<br>
+                USA
+            </address>
+        <hr>
+            <bdo dir="rtl">This text will be written from right to left</bdo> <br>
+            <bdo dir="ltr">This text will be written from right to left</bdo>
     </body>
 </html>
