--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
     </head>
     <body>
         <a href="hriday.html" target="_blank" title="hriday.html">Click here</a>
-        <hr>
         <h1>Cricket Stats:</h1>
         <table>
           <tr>
-            <th>Month</th>
+            <th class="td-first-child">Month</th>
             <th>Type</th>
             <th>Aarav</th>
             <th>Hriday</th>
@@ -26,7 +25,7 @@
             <th>Vedant</th>
           </tr>
           <tr>
-            <td rowspan="2">January</td>
+            <td rowspan="2" class="td-first-child">January</td>
             <td>Runs</td>
             <td>141</td>
             <td>643</td>
@@ -51,7 +50,7 @@
             <td>NA</td>
           </tr>
           <tr>
-            <td rowspan="2">February</td>
+            <td rowspan="2" class="td-first-child">February</td>
             <td>Runs</td>
             <td>43</td>
             <td>607</td>
@@ -76,7 +75,7 @@
             <td>NA</td>
           </tr>
           <tr>
-            <td rowspan="2">March</td>
+            <td rowspan="2" class="td-first-child">March</td>
             <td>Runs</td>
             <td>364</td>
             <td>1110</td>
@@ -101,7 +100,7 @@
             <td>1</td>
           </tr>
           <tr>
-            <td rowspan="2">April</td>
+            <td rowspan="2" class="td-first-child">April</td>
             <td>Runs</td>
             <td>760</td>
             <td>1032</td>
@@ -126,7 +125,7 @@
             <td>NA</td>
           </tr>
           <tr>
-            <td rowspan="2">May</td>
+            <td rowspan="2" class="td-first-child">May</td>
             <td>Runs</td>
             <td>788</td>
             <td>1179</td>
@@ -151,7 +150,7 @@
             <td>NA</td>
           </tr>
           <tr>
-            <td rowspan="2">June</td>
+            <td rowspan="2" class="td-first-child">June</td>
             <td>Runs</td>
             <td></td>
             <td></td>
@@ -176,7 +175,7 @@
             <td></td>
           </tr>
           <tr>
-            <td rowspan="2">July</td>
+            <td rowspan="2" class="td-first-child">July</td>
             <td>Runs</td>
             <td></td>
             <td></td>
@@ -201,7 +200,7 @@
             <td></td>
           </tr>
           <tr>
-            <td rowspan="2">August</td>
+            <td rowspan="2" class="td-first-child">August</td>
             <td>Runs</td>
             <td></td>
             <td></td>
@@ -226,7 +225,7 @@
             <td></td>
           </tr>
           <tr>
-            <td rowspan="2">September</td>
+            <td rowspan="2" class="td-first-child">September</td>
             <td>Runs</td>
             <td></td>
             <td></td>
@@ -251,7 +250,7 @@
             <td></td>
           </tr>
           <tr>
-            <td rowspan="2">October</td>
+            <td rowspan="2" class="td-first-child">October</td>
             <td>Runs</td>
             <td></td>
             <td></td>
@@ -276,7 +275,7 @@
             <td></td>
           </tr>
           <tr>
-            <td rowspan="2">November</td>
+            <td rowspan="2" class="td-first-child">November</td>
             <td>Runs</td>
             <td></td>
             <td></td>
@@ -301,7 +300,7 @@
             <td></td>
           </tr>
           <tr>
-            <td rowspan="2">December</td>
+            <td rowspan="2" class="td-first-child">December</td>
             <td>Runs</td>
             <td></td>
             <td></td>
