--- a/HTMLCSSProject/hitman.html
+++ b/HTMLCSSProject/hitman.html
@@ -1,11 +1,17 @@
 <!doctype html>
 <html>
+    <style>
+        body{
+            background-color:aqua
+        }
+    </style>
     <head>
         <title>
             Records
         </title>
     </head>
-    <body>
+        <body>
+        <a href="index.html" target="_blank" title="index.html">Click here</a>
         <h1> Records made in 2024 </h1>
         <h2> Half Centuries </h2>
         <li> Aarav-10 times </li> <br>
@@ -45,5 +51,5 @@
         <hr>
         <h2>Double Century</h2>
         <li> Priyansh-once </li>
-    </body>
+        </body>    
 </html>
