--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
         </title>
         <link rel="icon" type="image/x-icon" href="Images/cricket.ico" >
         <link rel="stylesheet" href="index.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Cactus+Classical+Serif&display=swap" rel="stylesheet">
     </head>
     <body>
-        <a href="hriday.html" target="_blank" title="hriday.html">Click here</a>
+        <a href="hriday.html" target="_blank" title="hriday.html">Click here for teaching page</a>
+        <br>
+        <a href="hitman.html" target="_blank" title="hitman.html">Click here for cricket records</a>
         <h1>Cricket Stats:</h1>
         <table>
           <tr>
