Final Commit Changes for the main table page

--- a/hitman.html
+++ b/hitman.html
@@ -16,22 +16,22 @@
         <body>
         <a href="index.html" target="_blank" title="index.html">Click here</a>
         <h1> Records made in 2024 </h1>
-        <h2> Half Centuries </h2>
-        <li> Aarav-10 times </li> <br>
-        <li> Hriday-23 times </li> <br>
-        <li> Krishiv-twice </li> <br>
-        <li> Nirvaan-once </li> <br>
-        <li> Panav-18 times </li> <br>
-        <li> Priyansh-10 times </li> <br>
+        <ol> <h2><li> Half Centuries </li></h2>
+        <ul> <li> Aarav-12 times </li>
+        <li> Hriday-25 times </li>
+        <li> Krishiv-twice </li>
+        <li> Nirvaan-twice </li> 
+        <li> Panav-20 times </li>
+        <li> Priyansh-10 times </li> </ul><br>
         <hr>
-        <h2> Centuries </h2>
-        <li> Hriday-thrice </li> <br>
+        <h2><li> Centuries </li></h2>
+        <ul> <li> Hriday-thrice </li> <br> 
         <li> Nirvaan-once </li> <br>
         <li> Panav-4 times </li> <br>
         <li> Priyansh-twice </li> <br>
-        <hr>
-        <h2> Half Century In Patnership </h2>
-        <li> Aarav and Hriday-5 times </li> <br>
+        <hr> </ul>
+        <h2><li> Half Century In Patnership </li></h2>
+        <ul> <li> Aarav and Hriday-5 times </li> <br>
         <li> Aarav and Krishiv-once </li> <br>
         <li> Aarav and Nirvaan-once </li> <br>
         <li> Aarav and Priyansh-thrice </li> <br>
@@ -42,17 +42,21 @@
         <li> Krishiv and Priyansh-once </li> <br>
         <li> Nirvaan and Priyansh-twice </li> <br>
         <li> Nirvaan and Panav-once </li> <br>
-        <li> Panav and Priyansh-thrice </li> <br>
+        <li> Panav and Priyansh-thrice </li> </ul> <br>
         <hr>
-        <h2> Century In Patnership </h2>
-        <li> Hriday and Aarav-twice </li> <br>
+        <h2><li> Century In Patnership </li></h2>
+        <ul> <li> Hriday and Aarav-twice </li> <br>
         <li> Hriday and Priyansh-once </li> <br>
+        <li> Aarav and Priyansh-once </li> </ul>
         <hr>
-        <h2>Fastest Fifty</h2>
-        <li> Hriday(In 10 Balls) </li> <br>
-        <li> Panav(In 10 Balls) </li>
+        <h2><li>Fastest Fifty</li></h2>
+        <ul> <li> Hriday(In 10 Balls) </li> <br>
+        <li> Panav(In 10 Balls) </li> </ul>
         <hr>
-        <h2>Double Century</h2>
-        <li> Priyansh-once </li>
+        <h2><li>Double Century</li></h2>
+        <ul> <li> Priyansh-once </li> </ul>
+        <hr>
+        <h2><li> 6 sixes in an over </li></h2>
+        <ul> <li> Panav-once </li> </ul> </ol>
         </body>    
 </html>
