--- a/hriday.html
+++ b/hriday.html
@@ -23,7 +23,7 @@
             <i> This is italic text </i> <br>
             <strong> This is strong text same like bold </strong> <br>
             <em> This is empasized text same like italics </em> <br>
-            <mark> This is maked text or highlighted </mark> <br>
+            <mark> This is marked text or highlighted </mark> <br>
             <small> This is small text </small> <br>
             <del> This is deleted text or strikethrough </del> <br>
             Sub<sub> This is subscript </sub> <br>
@@ -35,6 +35,7 @@
         </p>
         <blockquote cite="http://www.worldwildlife.org/who/index.html">
             <q>
+                For 60 years, WWF has worked to help people and nature thrive. As the world's leading conservation organization, WWF works in nearly 100 countries. At every level, we collaborate with people around the world to develop and deliver innovative solutions that protect communities, wildlife, and the places in which they live.
                 For 60 years, WWF has worked to help people and nature thrive. As the world's leading conservation organization, WWF works in nearly 100 countries. At every level, we collaborate with people around the world to develop and deliver innovative solutions that protect communities, wildlife, and the places in which they live.
             </q>
         </blockquote>
