--- a/index.html
+++ b/index.html
@@ -11,9 +11,17 @@
         <link href="https://fonts.googleapis.com/css2?family=Cactus+Classical+Serif&display=swap" rel="stylesheet">
     </head>
     <body>
-        <a href="hriday.html" target="_blank" title="hriday.html">Click here for teaching page</a>
-        <br>
-        <a href="hitman.html" target="_blank" title="hitman.html">Click here for cricket records</a>
+        <div class="btn">
+        <a href="hriday.html">
+            Teaching Page
+        </a>
+        </div>
+        <div class="btn">
+        <a href="hitman.html">
+            Cricket  Records
+        </a>
+        </div>
+        <img src="Images/download.jpg">
         <h1>Cricket Stats:</h1>
         <table>
           <tr>
