--- a/hitman.html
+++ b/hitman.html
@@ -1,27 +1,23 @@
 <!doctype html>
 <html>
-    <style>
-        body{
-            background-color:aqua;
-}
-        h1{
-            color:red
-}
-    </style>
     <head>
         <title>
             Records
         </title>
+        <link rel="stylesheet" href="hitman.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     </head>
         <body>
         <a href="index.html" target="_blank" title="index.html">Click here</a>
         <h1> Records made in 2024 </h1>
         <ol> <h2><li> Half Centuries </li></h2>
-        <ul> <li> Aarav-12 times </li>
-        <li> Hriday-25 times </li>
-        <li> Krishiv-twice </li>
-        <li> Nirvaan-twice </li> 
-        <li> Panav-20 times </li>
+        <ul> <li> Aarav-12 times </li> <br>
+        <li> Hriday-25 times </li> <br> 
+        <li> Krishiv-twice </li> <br>
+        <li> Nirvaan-twice </li> <br>
+        <li> Panav-20 times </li> <br>
         <li> Priyansh-10 times </li> </ul><br>
         <hr>
         <h2><li> Centuries </li></h2>
