--- a/hitman.html
+++ b/hitman.html
@@ -10,43 +10,46 @@
         <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     </head>
         <body>
-        <a href="index.html" target="_blank" title="index.html">Click here</a>
+        <div class="btn">
+        <a href="index.html" target="_blank" title="index.html">Click here
+        </a>
+        </div> <br>
         <h1> Records made in 2024 </h1>
         <ol> <h2><li> Half Centuries </li></h2>
-        <ul> <li> Aarav-12 times </li> <br>
-        <li> Hriday-25 times </li> <br> 
-        <li> Krishiv-twice </li> <br>
-        <li> Nirvaan-twice </li> <br>
-        <li> Panav-20 times </li> <br>
-        <li> Priyansh-10 times </li> </ul><br>
+        <ul> <li> Aarav-18 times </li> 
+        <li> Hriday-33 times </li>  
+        <li> Krishiv-twice </li> 
+        <li> Nirvaan-twice </li> 
+        <li> Panav-20 times </li> 
+        <li> Priyansh-12 times </li> </ul>
         <hr>
         <h2><li> Centuries </li></h2>
-        <ul> <li> Hriday-thrice </li> <br> 
-        <li> Nirvaan-once </li> <br>
-        <li> Panav-4 times </li> <br>
-        <li> Priyansh-twice </li> <br>
+        <ul> <li> Hriday-4 times </li>  
+        <li> Nirvaan-once </li> 
+        <li> Panav-4 times </li> 
+        <li> Priyansh-twice </li> 
         <hr> </ul>
         <h2><li> Half Century In Patnership </li></h2>
-        <ul> <li> Aarav and Hriday-5 times </li> <br>
-        <li> Aarav and Krishiv-once </li> <br>
-        <li> Aarav and Nirvaan-once </li> <br>
-        <li> Aarav and Priyansh-thrice </li> <br>
-        <li> Hriday and Nirvaan-once </li> <br>
-        <li> Hriday and Panav-thrice </li> <br>
-        <li> Hriday and Pranay-once </li> <br>
-        <li> Hriday and Preet-once </li> <br>
-        <li> Krishiv and Priyansh-once </li> <br>
-        <li> Nirvaan and Priyansh-twice </li> <br>
-        <li> Nirvaan and Panav-once </li> <br>
-        <li> Panav and Priyansh-thrice </li> </ul> <br>
+        <ul> <li> Aarav and Hriday-7 times </li> 
+        <li> Aarav and Krishiv-once </li> 
+        <li> Aarav and Nirvaan-once </li> 
+        <li> Aarav and Priyansh-thrice </li> 
+        <li> Hriday and Nirvaan-once </li> 
+        <li> Hriday and Panav-thrice </li> 
+        <li> Hriday and Pranay-once </li> 
+        <li> Hriday and Preet-once </li> 
+        <li> Krishiv and Priyansh-once </li> 
+        <li> Nirvaan and Priyansh-twice </li> 
+        <li> Nirvaan and Panav-once </li> 
+        <li> Panav and Priyansh-thrice </li> </ul> 
         <hr>
         <h2><li> Century In Patnership </li></h2>
-        <ul> <li> Hriday and Aarav-twice </li> <br>
-        <li> Hriday and Priyansh-once </li> <br>
-        <li> Aarav and Priyansh-once </li> </ul>
+        <ul> <li> Hriday and Aarav-twice </li> 
+        <li> Hriday and Priyansh-once </li> 
+        <li> Aarav and Priyansh-twice </li> </ul>
         <hr>
         <h2><li>Fastest Fifty</li></h2>
-        <ul> <li> Hriday(In 10 Balls) </li> <br>
+        <ul> <li> Hriday(In 10 Balls) </li> 
         <li> Panav(In 10 Balls) </li> </ul>
         <hr>
         <h2><li>Double Century</li></h2>
