--- a/hitman.html
+++ b/hitman.html
@@ -8,10 +8,11 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
         <body>
         <div class="btn">
-        <a href="index.html" target="_blank" title="index.html">Click here
+        <a href="index.html" target="_blank" >Click here
         </a>
         </div> <br>
         <h1> Records made in 2024 </h1>
