--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Cactus+Classical+Serif&display=swap" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div class="btn">
@@ -21,7 +22,7 @@
             Cricket  Records
         </a>
         </div>
-        <img src="Images/download.jpg">
+        <img src="Images/download.png">
         <h1>Cricket Stats:</h1>
         <table>
           <tr>
