--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             Cricket  Records
         </a>
         </div>
-        <img src="Images/download.png">
+        <img src="Images/hitman.jpg">
         <h1>Cricket Stats:</h1>
         <table>
           <tr>
@@ -191,27 +191,27 @@
           <tr>
             <td rowspan="2" class="td-first-child">July</td>
             <td>Runs</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>452</td>
+            <td>542</td>
+            <td>NA</td>
+            <td>NA</td>
+            <td>125</td>
+            <td>NA</td>
+            <td>NA</td>
+            <td>281</td>
+            <td>NA</td>
           </tr>
           <tr>
             <td>Wickets</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>5</td>
+            <td>13</td>
+            <td>NA</td>
+            <td>NA</td>
+            <td>10</td>
+            <td>NA</td>
+            <td>NA</td>
+            <td>5</td>
+            <td>NA</td>
           </tr>
           <tr>
             <td rowspan="2" class="td-first-child">August</td>
