--- a/hitman.html
+++ b/hitman.html
@@ -17,46 +17,56 @@
         </div> <br>
         <h1> Records made in 2024 </h1>
         <ol> <h2><li> Half Centuries </li></h2>
-        <ul> <li> Aarav-18 times </li> 
-        <li> Hriday-33 times </li>  
+        <ul> <li> Aarav-21 times </li> 
+        <li> Hriday-37 times </li>  
         <li> Krishiv-twice </li> 
         <li> Nirvaan-twice </li> 
-        <li> Panav-20 times </li> 
-        <li> Priyansh-12 times </li> </ul>
+        <li> Panav-22 times </li> 
+        <li> Priyansh-15 times </li> </ul>
         <hr>
         <h2><li> Centuries </li></h2>
-        <ul> <li> Hriday-4 times </li>  
+        <ul> <li> Hriday-7 times </li>  
         <li> Nirvaan-once </li> 
         <li> Panav-4 times </li> 
-        <li> Priyansh-twice </li> 
+        <li> Priyansh-twice </li>
+        <li> Aarav-once </li>
         <hr> </ul>
         <h2><li> Half Century In Patnership </li></h2>
-        <ul> <li> Aarav and Hriday-7 times </li> 
+        <ul> <li> Aarav and Hriday-9 times </li> 
         <li> Aarav and Krishiv-once </li> 
         <li> Aarav and Nirvaan-once </li> 
         <li> Aarav and Priyansh-thrice </li> 
         <li> Hriday and Nirvaan-once </li> 
         <li> Hriday and Panav-thrice </li> 
         <li> Hriday and Pranay-once </li> 
-        <li> Hriday and Preet-once </li> 
+        <li> Hriday and Preet-once </li>
+        <li> Hriday and Priyansh-twice </li>
         <li> Krishiv and Priyansh-once </li> 
         <li> Nirvaan and Priyansh-twice </li> 
         <li> Nirvaan and Panav-once </li> 
-        <li> Panav and Priyansh-thrice </li> </ul> 
+        <li> Panav and Priyansh-5 times </li> </ul> 
         <hr>
         <h2><li> Century In Patnership </li></h2>
         <ul> <li> Hriday and Aarav-twice </li> 
         <li> Hriday and Priyansh-once </li> 
-        <li> Aarav and Priyansh-twice </li> </ul>
+        <li> Aarav and Priyansh-thrice </li> </ul>
         <hr>
         <h2><li>Fastest Fifty</li></h2>
         <ul> <li> Hriday(In 10 Balls) </li> 
         <li> Panav(In 10 Balls) </li> </ul>
         <hr>
         <h2><li>Double Century</li></h2>
-        <ul> <li> Priyansh-once </li> </ul>
+        <ul> <li> Priyansh-once </li>
+             <li> Hriday-once </li> </ul>
         <hr>
-        <h2><li> 6 sixes in an over </li></h2>
-        <ul> <li> Panav-once </li> </ul> </ol>
+        <h2><li>6 sixes in an over</li></h2>
+        <ul> <li> Panav-once </li> </ul>
+        <hr>
+        <h2><li>Fastest Hundred</li></h2>
+        <ul><li>Hriday(In 3.5 overs)</li></ul>
+        <hr>
+        <h2><li>Highest Individual Score</li></h2>
+        <ul><li>Hriday(261 runs)</li></ul>
+            </ol>
         </body>    
 </html>
