--- a/hitman.html
+++ b/hitman.html
@@ -17,17 +17,17 @@
         </div> <br>
         <h1> Records made in 2024 </h1>
         <ol> <h2><li> Half Centuries </li></h2>
-        <ul> <li> Aarav-21 times </li> 
-        <li> Hriday-37 times </li>  
-        <li> Krishiv-twice </li> 
+        <ul> <li> Aarav-26 times </li> 
+        <li> Hriday-45 times </li>  
+        <li> Krishiv-thrice </li> 
         <li> Nirvaan-twice </li> 
         <li> Panav-22 times </li> 
-        <li> Priyansh-15 times </li> </ul>
+        <li> Priyansh-18 times </li> </ul>
         <hr>
         <h2><li> Centuries </li></h2>
-        <ul> <li> Hriday-7 times </li>  
+        <ul> <li> Hriday-9 times </li>  
         <li> Nirvaan-once </li> 
-        <li> Panav-4 times </li> 
+        <li> Panav-5 times </li> 
         <li> Priyansh-twice </li>
         <li> Aarav-once </li>
         <hr> </ul>
@@ -35,7 +35,7 @@
         <ul> <li> Aarav and Hriday-9 times </li> 
         <li> Aarav and Krishiv-once </li> 
         <li> Aarav and Nirvaan-once </li> 
-        <li> Aarav and Priyansh-thrice </li> 
+        <li> Aarav and Priyansh-4 times </li> 
         <li> Hriday and Nirvaan-once </li> 
         <li> Hriday and Panav-thrice </li> 
         <li> Hriday and Pranay-once </li> 
@@ -44,10 +44,10 @@
         <li> Krishiv and Priyansh-once </li> 
         <li> Nirvaan and Priyansh-twice </li> 
         <li> Nirvaan and Panav-once </li> 
-        <li> Panav and Priyansh-5 times </li> </ul> 
+        <li> Panav and Priyansh-6 times </li> </ul> 
         <hr>
         <h2><li> Century In Patnership </li></h2>
-        <ul> <li> Hriday and Aarav-twice </li> 
+        <ul> <li> Hriday and Aarav-4 times </li> 
         <li> Hriday and Priyansh-once </li> 
         <li> Aarav and Priyansh-thrice </li> </ul>
         <hr>
@@ -63,7 +63,7 @@
         <ul> <li> Panav-once </li> </ul>
         <hr>
         <h2><li>Fastest Hundred</li></h2>
-        <ul><li>Hriday(In 3.5 overs)</li></ul>
+        <ul><li>Hriday(In 3.5 overs) (Twice)</li></ul>
         <hr>
         <h2><li>Highest Individual Score</li></h2>
         <ul><li>Hriday(261 runs)</li></ul>
