--- a/hitman.html
+++ b/hitman.html
@@ -17,18 +17,18 @@
         </div> <br>
         <h1> Records made in 2024 </h1>
         <ol> <h2><li> Half Centuries </li></h2>
-        <ul> <li> Aarav-26 times </li> 
-        <li> Hriday-45 times </li>  
+        <ul> <li> Aarav-28 times </li> 
+        <li> Hriday-49 times </li>  
         <li> Krishiv-thrice </li> 
         <li> Nirvaan-twice </li> 
-        <li> Panav-22 times </li> 
-        <li> Priyansh-18 times </li> </ul>
+        <li> Panav-25 times </li> 
+        <li> Priyansh-20 times </li> </ul>
         <hr>
         <h2><li> Centuries </li></h2>
-        <ul> <li> Hriday-9 times </li>  
+        <ul> <li> Hriday-10 times </li>  
         <li> Nirvaan-once </li> 
         <li> Panav-5 times </li> 
-        <li> Priyansh-twice </li>
+        <li> Priyansh-twice </li>s
         <li> Aarav-once </li>
         <hr> </ul>
         <h2><li> Half Century In Patnership </li></h2>
@@ -47,17 +47,20 @@
         <li> Panav and Priyansh-6 times </li> </ul> 
         <hr>
         <h2><li> Century In Patnership </li></h2>
-        <ul> <li> Hriday and Aarav-4 times </li> 
+        <ul> 
+        <li> Aarav and Hriday-4 times </li>
+        <li> Aarav and Priyansh-thrice </li>
+        <li> Hriday and Panav-once </li>
         <li> Hriday and Priyansh-once </li> 
-        <li> Aarav and Priyansh-thrice </li> </ul>
+        </ul>
         <hr>
         <h2><li>Fastest Fifty</li></h2>
         <ul> <li> Hriday(In 10 Balls) </li> 
         <li> Panav(In 10 Balls) </li> </ul>
         <hr>
         <h2><li>Double Century</li></h2>
-        <ul> <li> Priyansh-once </li>
-             <li> Hriday-once </li> </ul>
+        <ul> <li> Hriday-once </li>
+             <li> Priyansh-once </li> </ul>
         <hr>
         <h2><li>6 sixes in an over</li></h2>
         <ul> <li> Panav-once </li> </ul>
