--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
             Cricket  Records
         </a>
         </div>
+        <div class="btn">
+        <a href="stats.html">
+            2025 Stats
+        </a>
+        </div>
         <img src="Images/hitman.jpg">
         <h1>Cricket Stats:</h1>
         <table>
