--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
             2025 Stats
         </a>
         </div>
+        <div class="btn">
+        <a href="records.html">
+            Records 2025
+        </a>
+        </div>
         <img src="Images/hitman.jpg">
         <h1>Cricket Stats:</h1>
         <table>
